--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=HostelBooking
 server.port=2508
-spring.datasource.url=jdbc:mysql://localhost:3306/MyHostel
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:MyHostel}
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=${DB_PASSWORD:PZGXbfztgpDjtECZClfIVhODSRndhalH}
 
 spring.jpa.hibernate.ddl-auto=update
 
