--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${PORT:2508}
 
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:MyHostel}
 spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD:PZGXbfztgpDjtECZClfIVhODSRndhalH}
+spring.datasource.password=${DB_PASSWORD:root}
 
 spring.jpa.hibernate.ddl-auto=update
 
