--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=HostelBooking
-server.port=${PORT:2508}
+server.port=${PORT}
+
 
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:MyHostel}
 spring.datasource.username=root
