--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=HostelBooking
-server.port=8080
+server.port=${PORT:2500}
+
 
 
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:MyHostel}
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD:root}
+
 
 spring.jpa.hibernate.ddl-auto=update
 
