--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=HostelBooking
-server.port=${PORT:8080T}
+server.port=${PORT:8080}
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:MyHostel}
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD:root}
