Initial commit of Spring Boot project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=HostelBooking
-server.port=${PORT:9999}
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:MyHostel}
+server.port=9999
+spring.datasource.url=jdbc:mysql://root:TMCVBoQVkSnpKThQRsNHvQrnZOgsVDiR@yamabiko.proxy.rlwy.net:18547/railway
 spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.password=TMCVBoQVkSnpKThQRsNHvQrnZOgsVDiR
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
