--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=HostelBooking
 server.port=9999
 spring.datasource.url=jdbc:mysql://root:TMCVBoQVkSnpKThQRsNHvQrnZOgsVDiR@yamabiko.proxy.rlwy.net:18547/railway
 spring.datasource.username=root
-spring.datasource.password=TMCVBoQVkSnpKThQRsNHvQrnZOgsVDiR
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
